--- a/order-summary-component/index.html
+++ b/order-summary-component/index.html
@@ -7,134 +7,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-  
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    * {box-sizing: border-box}
-    body, html {
-      font-family: 'Red Hat Display', sans-serif;
-      height: 100%;
-      margin: 0;
-      background-image: url("./images/pattern-background-desktop.svg");
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover
-    }
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-    .container {
-      position: relative;
-      width: 300px;
-      height: 450px;
-      background-color: white;
-      border-radius: 10px;
-      position: absolute;
-      top:0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      box-shadow: 5px 10px 18px rgb(214, 225, 255);
-      margin: auto;
-      text-align: center;
-    }
-    .img1 {
-      width: 100%;
-      height: 30%;
-      border-radius: 10px 10px 0px 0px;
-    }
-    .musicicon {
-      /*float: left;
-      width: 10%;
-      height: 40px;*/
-      position: absolute;
-      left: 15px;
-      bottom: 20px;
-      height: 35px;
-    }
-    h3 {
-      text-align: center;
-      color: hsl(223, 47%, 23%);
-    }
-    span {
-      color: hsl(224, 23%, 55%);
-    }
-    .text {
-      text-align: center;
-      font-size: 12px;
-      padding-left: 50px;
-      padding-right: 50px;
-      color: hsl(224, 23%, 55%);
-      font-weight: 500;
-    }
-    .sub {
-      position: relative;
-      width: 230px;
-      height: 70px;
-      background-color: hsl(225, 100%, 98%);
-      border-radius: 10px;
-      margin: auto;
-      padding: 25px;
-    }
-    .col {
-      position: absolute;
-      left: 70px;
-      bottom: 10px;
-      font-size: 12px;
-      font-weight: 500;
-    }
-    .under {
-      position: absolute;
-      font-size: 10px;
-      font-weight: 700;
-      color: hsl(245, 75%, 52%);
-      left: 180px;
-      bottom: 20px;
-      text-decoration: underline;
-    }
-    .under:active {color: #9999ff; text-decoration: none;}
-    .button1 {
-      position: absolute;
-      border: 0;
-      width: 230px;
-      height: 40px;
-      background-color: hsl(245, 75%, 52%);
-      border-radius: 10px;
-      margin: auto;
-      color: white;
-      font-size: 10px;
-      font-weight: 700;
-      text-align: center;
-      right: 35px;
-      bottom: 60px;
-      box-shadow: 5px 10px 20px rgb(214, 225, 255);
-    }
-    .button1:active {
-      background-color: #9999ff;
-    }
-    .button2 {
-      position: absolute;
-      border: 0;
-      background-color: transparent;
-      font-size: 10px;
-      font-weight: 700;
-      color: gray;
-      bottom: 20px;
-      left: 105px;
-      top: 400px;
-    }
-    .button2:active {color: rgb(51, 51, 51);}
-  </style>
 </head>
 <body>
-  <div class="container">
-    <img class="img1" src="./images/illustration-hero.svg">
+  <main>
+    <div class="container">
+    <img class="img1" src="./images/illustration-hero.svg" alt="">
     <div class="content">
-      <h3>Order Summary</h3>
+      <h1>Order Summary</h1>
       <p class="text">You can now listen to millions of songs, audiobooks and podcasts on any device anywhere you like!</p>
       <div class="sub">
-        <img class="musicicon" src="./images/icon-music.svg">
+        <img class="musicicon" src="./images/icon-music.svg" alt="">
         <p class="col"><b>Annual Plan</b><br><span>$59.99/year</span></p>
         <p class="under">Change</p>
       </div>
@@ -144,10 +28,12 @@
     <input type="submit" value="Cancel Order" class="button2">
     </div>    
   </div>
-  
-  <div class="attribution">
+  </main>
+  <<!-- footer>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Olabisi</a>.
   </div>
+  </footer> -->
 </body>
 </html>
