--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -13,31 +13,29 @@
 
 <body>
   <main>
-    <div class="container">
     <div class="showimage">
-      <img class="img1" src="./images/image-equilibrium.jpg" alt="">
+      <img class="img1" src="./images/image-equilibrium.jpg" alt="NFT image">
     </div>
     <div class="content">
       <h1>Equilibrium #3429</h1>
       <p class="sub">Our Equilibrium collection promotes balance and calm.</p>
       <div class="row">
         <div class="first">
-          <img src="./images/icon-ethereum.svg" alt="">
+          <img src="./images/icon-ethereum.svg" alt="ethereum icon">
           <p class="eth">0.041 ETH</p>
         </div>
         <div class="next">
-          <img src="./images/icon-clock.svg" alt="">
+          <img src="./images/icon-clock.svg" alt="clock icon">
           <p class="threedays">3 days left</p>
         </div>
       </div>
       <hr>
       <div class="last">
-        <img class="avi" src="./images/image-avatar.png" alt="">
+        <img class="avi" src="./images/image-avatar.png" alt="profile picture">
         <p class="att"><span>Creation of</span> Olabisi Olaoye</p>
       </div>
 
     </div>
-  </div>
   </main>
 </body>
 </html>
